examples/kju/positive/imports.kju
fun imp1(): Unit import
fun imp1(a: Int): Int import
fun imp2(a: Int, b: Bool): Int import

fun kju(): Unit
{
	imp1();
    imp1(5);
    imp2(10, false);
}
