examples/kju/negative/nameResolver/repeated_parameter_names.kju
fun f(a: Int, b: Bool, a: Int): Unit {}

fun kju(): Unit {}
